rubocop/examples/good/Style_DefWithParentheses.rb
# 'https://github.com/bbatsov/ruby-style-guide#method-parens'

# Use def with parentheses when there are parameters.
#   Omit the parentheses when the method doesn't accept any parameters.

# good
def some_method
 # body omitted
end

# good
def some_method_with_parameters(param1, param2)
 # body omitted
end
