rubocop/examples/bad/style_MethodDefParentheses.rb
# Use def with parentheses when there are parameters. Omit the parentheses when
#   the method doesn't accept any parameters.

# bad
def some_method()
 # body omitted
end

# bad
def some_method_with_parameters param1, param2
 # body omitted
end
